small mobile layout spacing fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -307,7 +307,6 @@ main {
 
 .ZWhat--Heading {
   font-size: var(--h2FontSize);
-  margin-top: 100px;
 }
 
 .ZWhat--Body {
